@@ -1,0 +1,5 @@
+<!entity simtoolsguicont.sgml PUBLIC "-//SFI Hive//ENTITIES SimtoolsGUI Content//EN">
+<!entity simtoolsguirevhistory.sgml PUBLIC "-//SFI Hive//ENTITIES SimtoolsGUI Revision History//EN">
+<!entity simtoolsguimeta.sgml PUBLIC "-//SFI Hive//ENTITIES SimtoolsGUI Metadata//EN">
+<!entity simtoolsgui00.sgml PUBLIC "-//SFI Hive//ENTITIES SimtoolsGUI Introduction//EN">
+<!entity simtoolsguipages.sgml PUBLIC "-//SFI Hive//ENTITIES SimtoolsGUI Generated Content//EN">
